--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,25 @@
-# Couldn't automatically generate a config from your source code.
-# This is a generic template to serve as a base for your custom config
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 jobs:
-  test:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # Replace this with a real test runner invocation
-      - run:
-          name: Run tests
-          command: npm install --save
-  build:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # Replace this with steps to build a package, or executable
-      - run:
-          name: Build an artifact
-          command: touch example.txt
-      - store_artifacts:
-          path: example.txt
   deploy:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:14-browsers # Use the appropriate image
     steps:
-      # Replace this with steps to deploy to users
+      - checkout
       - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: Install Heroku CLI
+          command: curl https://cli-assets.heroku.com/install.sh | sh
+      - run:
+          name: Authenticate with Heroku
+          command: echo $HEROKU_API_KEY | heroku auth:token
+        environment:
+          HEROKU_API_KEY: $HEROKU_API_KEY
+      - run:
+          name: Deploy to Heroku
+          command: |
+            git remote add heroku https://git.heroku.com/<your-heroku-app-name>.git
+            git push heroku master
 workflows:
-  example:
+  version: 2
+  deploy:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - test
+      - deploy
