--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,45 @@
 version: 2.1
+
 jobs:
-  deploy:
+  build:
     docker:
-      - image: circleci/node:14-browsers # Use the appropriate image
+      - image: circleci/node:14
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       - run:
-          name: Install Heroku CLI
-          command: curl https://cli-assets.heroku.com/install.sh | sh
+          name: Install Dependencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
-          name: Authenticate with Heroku
-          command: echo $HEROKU_API_KEY | heroku auth:token
-        environment:
-          HEROKU_API_KEY: $HEROKU_API_KEY
+          name: Run Tests
+          command: npm test
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+  deploy:
+    docker:
+      - image: circleci/node:14
+    steps:
+      - attach_workspace:
+          at: /workspace
       - run:
-          name: Deploy to Heroku
-          command: |
-            git remote add heroku https://git.heroku.com/<your-heroku-app-name>.git
-            git push heroku master
+          name: Deploy
+          command: echo "Deploy steps go here"
+
 workflows:
   version: 2
-  deploy:
+  build_and_deploy:
     jobs:
-      - deploy
+      - build
+      - deploy:
+          requires:
+            - build
