--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
    docker:
-     image: circleci/node:20.0.0
-steps:
-checkout
-run : node src.js
+     image: circleci/node:20.0.0 
+   steps:
+    - checkout
+    - run: node src.js
