--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,18 @@
+[3:39 PM] Avinash Sharma
 version: 2.1
+ 
 jobs:
-  build:
-   docker:
-     image: circleci/node:20.0.0
-steps:
-- checkout
-- run : node example.js
+ test:
+  steps:
+   checkout:
+     -run:
+       -name: Install Nodejs Dependencies
+       command: npm install
+     -run:
+       -name: Run Code
+       command: node index.js
+ 
+workflows:
+ version: 2.1
+ jobs:
+   -test
