--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,17 @@
+version: 2.1 
+
 jobs:
  test:
   steps:
    checkout:
      -run:
        -name: Install Nodejs Dependencies
+       command: npm install -y
+     -run:
+       -name: Run Code
+       command: node index.js
+ 
+workflows:
+ version: 2.1
+ jobs:
+   -test
