--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,14 @@ jobs:
  test:
   steps:
    checkout:
-     -run:
-       -name: Install Nodejs Dependencies
+     run:
+       name: Install Nodejs Dependencies
        command: npm install -y
-     -run:
-       -name: Run Code
+     run:
+       name: Run Code
        command: node index.js
  
 workflows:
  version: 2.1
  jobs:
-   -test
+   test
