--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,33 @@
 version: 2.1
 
 jobs:
- build:
-  docker:
-   image: circleci/node:latest
-    steps:
-      checkout:
-       -run: npm install -y
-      checkout:
-       run: node index.js
-       
-workflows:
- jobs:
-  build
+  build:
+    docker:
+      # Use an official CircleCI Node.js image
+      - image: circleci/node:14
 
-       
+    steps:
+      - checkout
+
+      # Restore cached dependencies if available
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package-lock.json" }}
+            - v1-dependencies-
+
+      # Install dependencies
+      - run:
+          name: Install Dependencies
+          command: npm install
+
+      # Save dependencies to cache
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
+
+workflows:
+  version: 2
+  build_and_install_dependencies:
+    jobs:
+      - build
