--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,10 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-
+# Run tests
+      - run:
+          name: Run Tests
+          command: npm test
 workflows:
   version: 2
   build_and_install_dependencies:
